removed -Djava.ext.dirs=lib-ext as it is causing SVN security issues with svnkit